# nim-ninja-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  sec.py  settings.py
app/: bot.py
static/: about_me.txt
static/nim/: move_description  rules.txt  solution.txt
utils/: log.py  nim.py  reader.py  settings.py
