[tool.poetry]
name = "nim-ninja-bot"
version = "1.0.0"
description = ""
authors = ["Annovid <nil.nil532@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
telebot = "^0.0.5"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pytest = "^7.4.0"

[tool.ruff]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
